//------------------------------------------------------------------------------
// {C} Copyright 2019 Pensando Systems Inc. All rights reserved
//
// protobuf specification for common meta
//------------------------------------------------------------------------------

syntax = "proto3";
package api;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// IP address families
enum IPAddressFamily {
  IP_AF_NONE     = 0;
  IP_AF_INET     = 1;    // IPv4
  IP_AF_INET6    = 2;    // IPv6
}

// IP address object
message IPAddress {
  IPAddressFamily    ip_af   = 1 [(gogoproto.moretags) = "meta:mandatory"]; // IP address family
  oneof v4_or_v6 {
    fixed32          v4_addr = 2;      // IPv4 address
    bytes            v6_addr = 3;      // IPv6 address
  }
}

// IP Range
message IPRange {
  IPAddress    low_ipaddr  = 1;    // start ip address
  IPAddress    high_ipaddr = 2;    // end ip address
}

// IP Prefix object
message IPPrefix {
  IPAddress    address    = 1;      // IP address
  uint32       prefix_len = 2 [(gogoproto.moretags) = "meta:range:0-128"]; // prefix length
}
